# cg_cpp_template

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  MainHandler.cpp  MainHandler.h  main.cpp
tests/: CMakeLists.txt  TestsUtils.cpp  TestsUtils.h  test_main.cpp
